<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fhf1"
    tools:context=".Registro5Activity">

    <TextView
        android:id="@+id/textView6registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/textView6registro"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText6nombre"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:hint="@string/editText6nombre"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHighlight="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6registro" />

    <EditText
        android:id="@+id/editText6usuario"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:hint="@string/editText6usuario"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6correo" />

    <EditText
        android:id="@+id/editText6contraseña"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:hint="@string/editText6contraseña"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText6usuario"
        app:layout_constraintTop_toBottomOf="@+id/editText6correo" />

    <Button
        android:id="@+id/B6registrarusu"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_redondo"
        android:hint="@string/B6confirmar"
        android:onClick="confirmar"
        android:paddingLeft="10dp"
        android:text="@string/B6confirmar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText6tel1"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:hint="@string/editText6tel1"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/B6registrarusu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6usuario"
        app:layout_constraintVertical_bias="0.007" />

    <EditText
        android:id="@+id/editText6tel2"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:hint="@string/editText6tel2"
        android:inputType="number"
        android:onClick="regdireccion"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/B6registrarusu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText6tel1"
        app:layout_constraintTop_toBottomOf="@+id/editText6contraseña"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText6ap_pat"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:hint="@string/editText6ap_pat"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6nombre" />

    <EditText
        android:id="@+id/editText6ap_mat"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:hint="@string/editText6ap_mat"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/editText6ap_pat"
        app:layout_constraintTop_toBottomOf="@+id/editText6nombre" />

    <EditText
        android:id="@+id/editText6correo"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_redondo"
        android:ems="10"
        android:hint="@string/editText6correo"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6ap_pat" />

</androidx.constraintlayout.widget.ConstraintLayout>